ACE: Fix bug caused by sticky floating action button. You could not click on well's buttons when the div of the FAB was aligned with it.

--- a/WebApp/src/main/webapp/resources/css/floatingactionbutton.css
+++ b/WebApp/src/main/webapp/resources/css/floatingactionbutton.css
@@ -62,3 +62,15 @@
 .nounderline {
     text-decoration: none!important;
 }
+
+#wrapper {
+    position: fixed;
+    bottom: 0px;
+    right: 20%;
+}
+
+#container {
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+}
